[gd_scene load_steps=5 format=3 uid="uid://cdgrqruroljoy"]

[ext_resource type="Script" path="res://scenes/gesture_manager/gesture_detector.gd" id="1_3sui7"]
[ext_resource type="Script" path="res://scenes/gesture_manager/gesture_manager.gd" id="1_yymwu"]
[ext_resource type="Script" path="res://scenes/gesture_manager/gesture_randomizer.gd" id="2_ipkjp"]
[ext_resource type="Texture2D" uid="uid://dskxaejbn7slw" path="res://assets/arrow.png" id="2_n4sqm"]

[node name="GestureManager" type="Node"]
script = ExtResource("1_yymwu")

[node name="Arrows" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Arrows"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ArrowRect" type="TextureRect" parent="Arrows/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -32.0
offset_right = 128.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(128, 32)
texture = ExtResource("2_n4sqm")

[node name="GestureDetector" type="Node2D" parent="."]
script = ExtResource("1_3sui7")

[node name="GestureRandomizer" type="Node" parent="."]
script = ExtResource("2_ipkjp")

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="PoseTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="PoseTimer" to="." method="_on_pose_timer_timeout"]
